[package]
name = "pda-vault"
version = "0.1.0"
description = "PDA-Based Vault Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pda_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
